@@ -1,3 +1,11 @@
+1999-07-02  Matti Aarnio  <mea@mea.tmt.tele.fi>
+
+	* proto/cf/canon.cf, lib/rfc822scan.c:
+	    Turns out the best way to fix the 'foo\!faa!fii'
+	    problem is not to tinker with tsift patterns at
+	    canon.cf, but instead have '\!' pair scanned into
+	    token of its own.
+
 1999-07-01  Matti Aarnio  <mea@mea.tmt.tele.fi>
 
 	* proto/cf/canon.cf:
